<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/carousel_pager"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layout_constraintCircleRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_carousel_home"/>

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:dotsColor="@android:color/darker_gray"
            app:dotsCornerRadius="8dp"
            app:dotsSize="12dp"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="2.5"
            app:progressMode="false"
            app:selectedDotColor="@color/seed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carousel_pager" />

        <TextView
            android:id="@+id/tv_University"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/university"
            app:layout_constraintTop_toBottomOf="@id/dots_indicator"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/view_all"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_University"
            app:layout_constraintBottom_toBottomOf="@id/tv_University"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_universities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_University"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_recomendation" />

        <Button
            android:id="@+id/btn_recomendation"
            android:layout_width="320dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:padding="32dp"
            android:text="@string/find_scope_button"
            android:alpha="0"
            tools:alpha="100"
            android:drawableEnd="@drawable/round_arrow_circle_right_24"
            app:layout_constraintTop_toBottomOf="@id/rv_universities"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
